[package]
name = "solana-mev-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
# Yellowstone Vixen 0.4.0 核心依賴
yellowstone-vixen = { version = "0.4.0", features = ["prometheus"] }
yellowstone-vixen-jupiter-swap-parser = "0.4.0"

# 基礎依賴
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"

# Solana 相關
solana-sdk = "2.0"
bs58 = "0.5"

# 數值處理和時間處理
rust_decimal = { version = "1.0", features = ["serde-float"] }
chrono = { version = "0.4", features = ["serde"] }

# 解決版本衝突
tonic = "0.12.3" 